@@ -79,11 +79,11 @@ static GtkWidget *create_general_tab (GtkWidget *parent)
 
     radio = create_radio (parent, NULL, _("Shell syntax"), "ft_shell_radio");
     gtk_container_add (GTK_CONTAINER (cat_box), radio);
-    if (gnome_cmd_data_get_filter_type () == FILTER_TYPE_FNMATCH)
+    if (gnome_cmd_data_get_filter_type () == Filter::TYPE_FNMATCH)
         gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (radio), TRUE);
     radio = create_radio (parent, get_radio_group(radio), _("Regex syntax"), "ft_regex_radio");
     gtk_container_add (GTK_CONTAINER (cat_box), radio);
-    if (gnome_cmd_data_get_filter_type () == FILTER_TYPE_REGEX)
+    if (gnome_cmd_data_get_filter_type () == Filter::TYPE_REGEX)
         gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (radio), TRUE);
 
 
@@ -139,9 +139,9 @@ inline void store_general_options (GnomeCmdOptionsDialog *dialog)
         gnome_cmd_data_set_right_mouse_button_mode (RIGHT_BUTTON_SELECTS);
 
     if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (ft_regex_radio)))
-        gnome_cmd_data_set_filter_type (FILTER_TYPE_REGEX);
+        gnome_cmd_data_set_filter_type (Filter::TYPE_REGEX);
     else
-        gnome_cmd_data_set_filter_type (FILTER_TYPE_FNMATCH);
+        gnome_cmd_data_set_filter_type (Filter::TYPE_FNMATCH);
 
     gnome_cmd_data_set_case_sens_sort (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (case_sens_check)));
     gnome_cmd_data_set_dir_cache_size (gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON (dir_cache_size)));
